--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
-REACT_APP_SERVER=
+REACT_APP_SERVER=https://reedthamosthuman.onrender.com
+REACT_APP_DEPLOY=https://api.render.com/deploy/srv-cg42j9fdvk4st70pul9g?key=nHvoayau-so
