--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "url": "git+https://github.com/reedoooo/project-prep-backend.git"
   },
   "keywords": [
-    "city",
-    "explorer"
+    "reed",
+    "site"
   ],
   "author": "Reed Vogt",
   "license": "ISC",
