--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=3000
 # REACT_APP_SERVER=https://reedthamosthuman.onrender.com
-REACT_APP_SERVER=http://localhost:3000
+REACT_APP_SERVER=https://reedthamosthuman.onrender.com
 # REACT_APP_SERVER=https://api.render.com/deploy/srv-cg42j9fdvk4st70pul9g?key=nHvoayau-so
