--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=3001
 # REACT_APP_SERVER=https://reedthamosthuman.onrender.com
 REACT_APP_SERVER=https://reedthamosthuman.onrender.com
 # REACT_APP_SERVER=https://api.render.com/deploy/srv-cg42j9fdvk4st70pul9g?key=nHvoayau-so
+SECRET_KEY=sasuke
