added databse url

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ PORT=3001
 REACT_APP_SERVER=https://reedthamosthuman.onrender.com
 # REACT_APP_SERVER=https://api.render.com/deploy/srv-cg42j9fdvk4st70pul9g?key=nHvoayau-so
 SECRET_KEY=sasuke
+DATABASE_URL=https://us-east-2.aws.data.mongodb-api.com/app/data-pyokt/endpoint/data/v1
