--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3001
 REACT_APP_SERVER=https://reedthamosthuman.onrender.com
-DATABASE_URL=mongodb+srv://reedthahuman:oXrUOOfPSRxtyVdr@clusterthahuman.3c7fuql.mongodb.net/human-database?retryWrites=true&w=majority
+DATABASE_URL=mongodb+srv://reedthahuman:oXrUOOfPSRxtyVdr@ClusterThaHuman.3c7fuql.mongodb.net/human-database?retryWrites=true&w=majority
 REACT_APP_AUTH_DOMAIN=dev-eq6zzpz5vj8o8v17.us.auth0.com
 REACT_APP_AUTH_CLIENT_ID=pkjVpsG2T7vvDJ8YVpQ8AGippZ8MAJsn
 REACT_APP_AUTH_REDIRECT_URI=http://localhost:3001
