--- a/.env
+++ b/.env
@@ -14,4 +14,4 @@ OAUTH_TOKEN=https://dev-eq6zzpz5vj8o8v17.us.auth0.com/oauth/token
 # DATABASE_URL=mongodb://reedthahuman:Olivervogt1@0.0.0.0/0/human-database?ssl=true&authSource=admin
 # DATABASE_URL="mongodb://127.0.0.1:27017/human-database";
 DATABASE_URL=mongodb://localhost
- 
+#  MONGO_URI=mongodb://localhost:27017/myDB
