--- a/package.json
+++ b/package.json
@@ -30,21 +30,20 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "ejs": "^3.1.8",
-
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-jwt-authz": "^2.4.1",
     "express-oauth2-jwt-bearer": "^1.3.0",
     "express-openid-connect": "^2.12.1",
+    "http-errors": "~1.8.1",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.0.1",
     "jwt-auth": "^2.0.1",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.3",
-    "request": "^2.88.2",
-    "http-errors": "~1.8.1",
-    "morgan": "~1.10.0"
+    "morgan": "~1.10.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "eslint": "^8.34.0",
