--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-jwt-authz": "^2.4.1",
     "express-oauth2-jwt-bearer": "^1.3.0",
     "express-openid-connect": "^2.12.1",
+    "gridfs-stream": "^1.1.1",
     "http-errors": "~1.8.1",
     "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.0.1",
