--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "morgan": "~1.10.0",
+    "openai": "^3.2.1",
     "querystring": "^0.2.1",
     "request": "^2.88.2"
   },
